# stf

./: CMakeLists.txt  README.md
include/stf/: stf.h
include/stf/adapters/: integral_array.h  integral_vector.h
src/: CMakeLists.txt  stf.cpp  version.h.in
test/adapters/: CMakeLists.txt  test_adapters.cpp
test/dissimilar_types/: CMakeLists.txt  dissimilar_objects.h  test_dissimilar_integrals.cpp  test_dissimilar_objects.cpp
test/exceptions/: CMakeLists.txt  test_exceptions.cpp
test/floats/: CMakeLists.txt  test_floats.cpp
test/integrals/: CMakeLists.txt  test_integrals.cpp
test/memory/: CMakeLists.txt  test_memory.cpp
test/miscellaneous/: CMakeLists.txt  test_miscellaneous.cpp
test/objects/: CMakeLists.txt  some_object.h  test_objects.cpp
